# power-grid-model-workshop

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_GOVERNANCE.md  Power Flow Assignment with Solutions.ipynb  Power Flow Assignment.ipynb  Power Flow Example.ipynb  README.md  SUPPORT.md  State Estimation Assignment with Solutions.ipynb  State Estimation Assignment.ipynb  State Estimation Example.ipynb  pyproject.toml  requirements.txt  uv.lock.license
.github/: dependabot.yml
.github/workflows/: check-examples-unchanged.yml  copy-examples.yml  reuse-compliance.yml  sync-examples.yml
data/: ev_profile.csv
demonstrations/: Power Flow Algorithm Comparison.ipynb
examples/: Asymmetric Calculation Example.ipynb  Asymmetric Line.ipynb  Generic Branch Example.ipynb  Make Test Dataset.ipynb  Power Flow Example.ipynb  Serialization Example.ipynb  Short Circuit Example.ipynb  State Estimation Example.ipynb  State estimation with Newton-Raphson method.ipynb  Transformer Examples.ipynb  Validation Examples.ipynb
pgm-advanced-usage-workshop/: Advanced Workshop Assignment.ipynb  Advanced Workshop.ipynb  ev_load_profile_generator.py  utils.py  utils_notebook.ipynb
power-flow-assignment/: Power Flow Assignment with Solutions.ipynb  Power Flow Assignment.ipynb
power-grid-model-ds/: README.md  advanced.ipynb  helper.py  introduction.ipynb
source_calculation/: grid.json  source_calculation.ipynb
state-estimation-assignment/: State Estimation Assignment with Solutions.ipynb  State Estimation Assignment.ipynb
(+18 files in other folders)
